# new_tube

./: .gitignore  Cargo.toml  README.md
bot/: Cargo.toml
bot/src/: main.rs
src/: bot.rs  config.rs  date.rs  date_helper.rs  db.rs  dump.rs  duration_formatter.rs  environment.rs  main.rs  new_tube_service.rs  playlist.rs  playlist_item.rs  telegram_bot.rs  video.rs  video_retriever.rs  video_service.rs  youtube_dlp.rs
src/api/: caller.rs  mod.rs  playlist_items.rs  video_items.rs
src/db/: mod.rs
src/new/: database.rs  mod.rs  yt_dlp.rs
src/new_tube_service/: database.rs  mod.rs  yt_dlp.rs
src/telegram/: background_video_fetcher.rs  bot.rs  mod.rs  video_fetch_worker.rs
src/telegram_bot/: mod.rs  video_fetcher.rs
src/tg_bot/: background_video_fetcher.rs  mod.rs  video_fetch_worker.rs
