[package]
name = "new_tube"
version = "0.1.0"
edition = "2021"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[dependencies]
error_generator = "1.2.1"
cli_table = { git = "https://github.com/Warhorst/cli_table.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
clokwerk = "0.3.5"
frankenstein = "0.20.0"