[package]
name = "new_tube"
version = "0.6.0"
edition = "2021"

[dependencies.rusqlite]
version = "0.33.0"
features = ["bundled"]

[dependencies]
error_generator = "1.2.1"
cli_table = { git = "https://github.com/Warhorst/cli_table.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
clokwerk = "0.4.0"
frankenstein = "0.30.3"
ron = "0.8.1"